--- a/example/index.html
+++ b/example/index.html
@@ -8,12 +8,17 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="viewport" content="width=device-width,user-scalable=no, scale=1, maximum-scale=1.0" />
-        <title>MapTack - A simple JavaScript based geolocation form widget</title>
-        <!-- Important early load external scripts -->
-        <link rel="stylesheet" href="http://jimmy.hillis.me//stylesheets/styles.css" />
+        <title>Maptack - Coffeescript lat/long form widget</title>
         <style type="text/css">
             html, body{
-                background:#ccc;
+                background:#fff;
+                padding-bottom:20px;
+                font-family:Helvetica,Arial,sans-serif;
+                font-size:16px;
+                line-height:1.4em;
+            }
+            h1{
+                margin-top:20px;
             }
             #wrap{
                 max-width:800px;
@@ -28,7 +33,6 @@
                 #maptack{
                     width:90%;
                     margin:20px auto;
-                    /*border:solid 1px black;*/
                     min-height:500px;
                 }
                 #maptack-search{
@@ -36,22 +40,40 @@
                     max-width:500px;
                     margin:0 auto;
                 }
+                    #maptack-search fieldset{
+                        border:0;
+                        padding:0;
+                    }
+                    #maptack-search input{
+                        padding:5px;
+                        font-size:16px;
+                        margin:0.5em 0 1em 0;
+                    }
+                    #maptack-search input[type="text"]{
+                        width:100%;
+                        display:block;
+                    }
                     #maptack-search ul{
                         list-style:none;
-                        margin-left:0;
+                        padding-left:0;
                     }
+                #maptack-log{
+                    font-family:monospace;
+                }
         </style>
     </head>
     <body>
         <div id="wrap">
             <div class="copy">
-                <h1>MapTack</h1>
-                <h2>A simple JavaScript geolocation form widget</h2>
+                <h1>Maptack</h1>
                 <p>
-                    This tool allows you to quickly search and geo-locate
-                    addresses (or any point) into latitude and longitude
-                    values within an HTML form. Often useful for mapping
-                    locations or points for a public facing map.
+                    Maptack is a coffeescript lat/lng form widget.
+                </p>
+                <p>
+                    This Coffeescript tool allows users to quickly search
+                    and geo-locate addresses (or map locations) into latitude
+                    and longitude, specially for an HTML form. Often useful
+                    for location specific points used on a public facing map.
                 </p>
                 <p>
                     This plugin required jQuery and makes use of the Google
@@ -64,10 +86,12 @@
                     <ul>
                         <li>
                             <label for="maptack-address">Find coordinates by address</label>
-                            <input id="maptack-address" type="text" placeholder="128 Somestreet, Someville WA Australia" />
+                            <input id="maptack-address" type="text"
+                                   placeholder="128 Somestreet, Someville WA Australia" />
                         </li>
                         <li>
-                            <input id="maptack-findbyaddress" name="maptack-findbyaddress" type="button" value="Find coordinates" />
+                            <input id="maptack-findbyaddress" name="maptack-findbyaddress"
+                                   type="button" value="Find address coordinates" />
                         </li>
                     </ul>
                 </fieldset>
@@ -89,7 +113,10 @@
                     </ul>
                 </fieldset>
             </form>
-            <div id="maptack-log"></div>
+            <div class="copy log">
+                <h2>Log</h2>
+                <div id="maptack-log"></div>
+            </div>
         </div>
         <!-- JavaScript libraries and UX based code -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
